# claw-shield

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh
client/: index.ts  openclaw.plugin.json  package.json
client/src/: ohttp-shield.plugin.ts
gateway/: Cargo.toml  wrangler.toml
gateway/migrations/: 0001_create_traces.sql  0002_add_judge_columns.sql
gateway/scripts/: generate-ohttp-seed.ps1
gateway/src/: dashboard.html  judge.rs  lib.rs  telemetry.rs  waitlist.html
gateway/src/skills/: judge_audit.md
relay/: index.js  package-lock.json  package.json  wrangler.toml
